--- a/memorygame2/memorygame2/App.config
+++ b/memorygame2/memorygame2/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <memorygame2.Properties.Settings>
             <setting name="hatterkep" serializeAs="String">
-                <value>peanuts/background2.jpg</value>
+                <value>peanuts/background.jpg</value>
             </setting>
             <setting name="kepKonyvtar" serializeAs="String">
                 <value>peanuts/</value>
